# blockchain

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: main.cpp
src/block/: Block.cpp  Block.h
src/blockchain/: Blockchain.cpp  Blockchain.h
src/vote/: Vote.h
